...
  -->
<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- General terms -->
    <string name="stage">Stage</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>

    <string name="new_option">new…</string>
    <string name="edit_option">edit…</string>

...
    <string name="always">Always</string>
    <string name="deny">Deny</string>

    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>

    <string name="skip">skip</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>

...
    <string name="portrait">portrait</string>
    <string name="unknown">unknown</string>
    <string name="disconnect">Disconnect</string>
    <!--  -->

    <!-- Main Menu -->
    <string name="main_menu_continue">Continue project</string>
    <string name="main_menu_new">New project</string>
    <string name="main_menu_programs">Projects on device</string>
    <string name="main_menu_help">Help</string>
    <string name="main_menu_web">Catrobat community</string>
    <string name="main_menu_upload">Upload project</string>

    <string name="main_menu_rate_app">Rate us!</string>
    <string name="main_menu_terms_of_use">Terms of Use and Service</string>
...
    <!-- NFC activity -->
    <string name="nfc_activity_title">NFC tags</string>

    <!-- Settings activity -->
    <string name="preference_title">Settings</string>
    <string name="preference_title_language">Language</string>
    <string name="preference_description_language">Set the app\'s language</string>

    <string name="preference_title_web_access">Web access</string>
    <string name="preference_description_web_access">Edit to add or remove trusted domains</string>
    <string name="preference_screen_web_access_title">Edit trusted domains</string>

    <string name="preference_title_ai">Artificial intelligence (AI) extension</string>
...

    <string name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string name="backpack">Backpack</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="merge">Merge</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="project_options">Project options</string>
    <string name="sort_projects">Sort</string>
    <string name="unsort_projects">Unsort</string>

    <!-- New Dialog Titles -->
...
